<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-regular"
            android:textSize="24sp"
            android:height="48dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/spotify_streamer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            style="@style/NormalButton"
            android:onClick="launchApp" />

        <Button
            android:id="@+id/scores_app_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scores_app"
            style="@style/NormalButton"
            android:onClick="launchApp" />

        <Button
            android:id="@+id/library_app_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            style="@style/NormalButton"
            android:onClick="launchApp" />

        <Button
            android:id="@+id/build_it_bigger_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger"
            style="@style/NormalButton"
            android:onClick="launchApp" />

        <Button
            android:id="@+id/xyz_app_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader"
            style="@style/NormalButton"
            android:onClick="launchApp" />

        <Button
            android:id="@+id/capstone_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            style="@style/SpecialButton"
            android:onClick="launchApp" />

    </LinearLayout>

</ScrollView>
